# nelder2023

./: CMakeLists.txt  README.md
cmd/: args.h  main.cpp
internal/: area.h  common.h  method.h  method_nelder_mead.cpp  method_nelder_mead.h  method_random_walk.cpp  method_random_walk.h  point.h  test_functions.h  trace.h
